[package]
name = "adsb_demod"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-performance ADS-B decoder in Rust using FutureSDR framework with real-time web interface"
repository = "https://github.com/ccustine/aviaware"
keywords = ["adsb", "sdr", "aviation", "futuresdr", "decoder"]
categories = ["command-line-utilities", "science", "web-programming"]
authors = ["ccustine"]

[workspace]

[[bin]]
name = "aviaware"
path = "src/bin/listen_adsb.rs"

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
rtlsdr = ["futuresdr/rtlsdr"]
soapy = ["futuresdr/soapy"]

[dependencies]
adsb_deku = "0.7"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futuresdr = { version = "0.0.38", features = ["seify"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
